--- a/docs/modules/components/pages/inputs/otlp_grpc.adoc
+++ b/docs/modules/components/pages/inputs/otlp_grpc.adoc
@@ -39,6 +39,7 @@ Common::
 input:
   label: ""
   otlp_grpc:
+    encoding: json
     address: 0.0.0.0:4317
     rate_limit: ""
 ```
@@ -53,6 +54,7 @@ Advanced::
 input:
   label: ""
   otlp_grpc:
+    encoding: json
     address: 0.0.0.0:4317
     tls:
       enabled: false
@@ -71,8 +73,8 @@ input:
 
 Exposes an OpenTelemetry Collector gRPC receiver that accepts traces, logs, and metrics via gRPC.
 
-Telemetry data is received in OTLP protobuf format and converted to individual Redpanda OTEL v1 protobuf messages.
-Each signal (span, log record, or metric) becomes a separate message with embedded Resource and Scope metadata, optimized for Kafka partitioning.
+Telemetry data is received in OTLP protobuf format and converted to individual Redpanda OTEL v1 messages.
+Each signal (span, log record, or metric) becomes a separate message with embedded Resource and Scope metadata.
 
 ## Protocols
 
@@ -85,8 +87,11 @@ Each OTLP export request is unbatched into individual messages:
 - **Logs**: One message per log record
 - **Metrics**: One message per metric
 
-Messages are encoded in Redpanda OTEL v1 protobuf format with metadata:
-- `signal_type`: "trace", "log", or "metric"
+Messages are encoded in Redpanda OTEL v1 format (protobuf or JSON, configurable via `encoding` field).
+
+Each message includes the following metadata:
+- `signalType`: The signal type - "trace", "log", or "metric"
+- `encoding` : The message encoding - "json" or "protobuf"
 
 ## Authentication
 
@@ -118,6 +123,20 @@ An optional rate limit resource can be specified to throttle incoming requests. 
 
 
 == Fields
+
+=== `encoding`
+
+Encoding format for messages in the batch. Options: 'protobuf' or 'json'.
+
+
+*Type*: `string`
+
+*Default*: `"json"`
+
+Options:
+`protobuf`
+, `json`
+.
 
 === `address`
 
