--- a/docs/modules/components/pages/inputs/otlp_grpc.adoc
+++ b/docs/modules/components/pages/inputs/otlp_grpc.adoc
@@ -66,6 +66,36 @@ input:
     tcp:
       reuse_addr: false
       reuse_port: false
+    schema_registry:
+      url: http://localhost:8081 # No default (required)
+      timeout: 5s
+      tls:
+        enabled: false
+        skip_cert_verify: false
+        enable_renegotiation: false
+        root_cas: ""
+        root_cas_file: ""
+        client_certs: []
+      oauth:
+        enabled: false
+        consumer_key: ""
+        consumer_secret: ""
+        access_token: ""
+        access_token_secret: ""
+      basic_auth:
+        enabled: false
+        username: ""
+        password: ""
+      jwt:
+        enabled: false
+        private_key_file: ""
+        signing_method: ""
+        claims: {}
+        headers: {}
+      common_subject: ""
+      trace_subject: ""
+      log_subject: ""
+      metric_subject: ""
 ```
 
 --
@@ -90,8 +120,8 @@ Each OTLP export request is unbatched into individual messages:
 Messages are encoded in Redpanda OTEL v1 format (protobuf or JSON, configurable via `encoding` field).
 
 Each message includes the following metadata:
-- `signalType`: The signal type - "trace", "log", or "metric"
-- `encoding` : The message encoding - "json" or "protobuf"
+- `otel_signal_type`: The signal type - "trace", "log", or "metric"
+- `otel_encoding` : The message encoding - "json" or "protobuf"
 
 ## Authentication
 
@@ -239,5 +269,388 @@ Enable SO_REUSEPORT, allowing multiple sockets to bind to the same port for load
 *Type*: `bool`
 
 *Default*: `false`
+
+=== `schema_registry`
+
+Optional Schema Registry configuration for adding Schema Registry wire format headers to messages.
+
+
+*Type*: `object`
+
+
+=== `schema_registry.url`
+
+Schema Registry URL for schema operations.
+
+
+*Type*: `string`
+
+
+```yml
+# Examples
+
+url: http://localhost:8081
+```
+
+=== `schema_registry.timeout`
+
+HTTP client timeout for Schema Registry requests.
+
+
+*Type*: `string`
+
+*Default*: `"5s"`
+
+=== `schema_registry.tls`
+
+Custom TLS settings can be used to override system defaults.
+
+
+*Type*: `object`
+
+
+=== `schema_registry.tls.enabled`
+
+Whether custom TLS settings are enabled.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `schema_registry.tls.skip_cert_verify`
+
+Whether to skip server side certificate verification.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `schema_registry.tls.enable_renegotiation`
+
+Whether to allow the remote server to repeatedly request renegotiation. Enable this option if you're seeing the error message `local error: tls: no renegotiation`.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+Requires version 3.45.0 or newer
+
+=== `schema_registry.tls.root_cas`
+
+An optional root certificate authority to use. This is a string, representing a certificate chain from the parent trusted root certificate, to possible intermediate signing certificates, to the host certificate.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+```yml
+# Examples
+
+root_cas: |-
+  -----BEGIN CERTIFICATE-----
+  ...
+  -----END CERTIFICATE-----
+```
+
+=== `schema_registry.tls.root_cas_file`
+
+An optional path of a root certificate authority file to use. This is a file, often with a .pem extension, containing a certificate chain from the parent trusted root certificate, to possible intermediate signing certificates, to the host certificate.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+```yml
+# Examples
+
+root_cas_file: ./root_cas.pem
+```
+
+=== `schema_registry.tls.client_certs`
+
+A list of client certificates to use. For each certificate either the fields `cert` and `key`, or `cert_file` and `key_file` should be specified, but not both.
+
+
+*Type*: `array`
+
+*Default*: `[]`
+
+```yml
+# Examples
+
+client_certs:
+  - cert: foo
+    key: bar
+
+client_certs:
+  - cert_file: ./example.pem
+    key_file: ./example.key
+```
+
+=== `schema_registry.tls.client_certs[].cert`
+
+A plain text certificate to use.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.tls.client_certs[].key`
+
+A plain text certificate key to use.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.tls.client_certs[].cert_file`
+
+The path of a certificate to use.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.tls.client_certs[].key_file`
+
+The path of a certificate key to use.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.tls.client_certs[].password`
+
+A plain text password for when the private key is password encrypted in PKCS#1 or PKCS#8 format. The obsolete `pbeWithMD5AndDES-CBC` algorithm is not supported for the PKCS#8 format.
+
+Because the obsolete pbeWithMD5AndDES-CBC algorithm does not authenticate the ciphertext, it is vulnerable to padding oracle attacks that can let an attacker recover the plaintext.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+```yml
+# Examples
+
+password: foo
+
+password: ${KEY_PASSWORD}
+```
+
+=== `schema_registry.oauth`
+
+Allows you to specify open authentication via OAuth version 1.
+
+
+*Type*: `object`
+
+
+=== `schema_registry.oauth.enabled`
+
+Whether to use OAuth version 1 in requests.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `schema_registry.oauth.consumer_key`
+
+A value used to identify the client to the service provider.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.oauth.consumer_secret`
+
+A secret used to establish ownership of the consumer key.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.oauth.access_token`
+
+A value used to gain access to the protected resources on behalf of the user.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.oauth.access_token_secret`
+
+A secret provided in order to establish ownership of a given access token.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.basic_auth`
+
+Allows you to specify basic authentication.
+
+
+*Type*: `object`
+
+
+=== `schema_registry.basic_auth.enabled`
+
+Whether to use basic authentication in requests.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `schema_registry.basic_auth.username`
+
+A username to authenticate as.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.basic_auth.password`
+
+A password to authenticate with.
+[CAUTION]
+====
+This field contains sensitive information that usually shouldn't be added to a config directly, read our xref:configuration:secrets.adoc[secrets page for more info].
+====
+
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.jwt`
+
+BETA: Allows you to specify JWT authentication.
+
+
+*Type*: `object`
+
+
+=== `schema_registry.jwt.enabled`
+
+Whether to use JWT authentication in requests.
+
+
+*Type*: `bool`
+
+*Default*: `false`
+
+=== `schema_registry.jwt.private_key_file`
+
+A file with the PEM encoded via PKCS1 or PKCS8 as private key.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.jwt.signing_method`
+
+A method used to sign the token such as RS256, RS384, RS512 or EdDSA.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.jwt.claims`
+
+A value used to identify the claims that issued the JWT.
+
+
+*Type*: `object`
+
+*Default*: `{}`
+
+=== `schema_registry.jwt.headers`
+
+Add optional key/value headers to the JWT.
+
+
+*Type*: `object`
+
+*Default*: `{}`
+
+=== `schema_registry.common_subject`
+
+Schema subject name for the common protobuf schema. Only used when encoding is 'protobuf'. Defaults to 'redpanda-otel-common' for protobuf encoding or 'redpanda-otel-common-json' for JSON encoding.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.trace_subject`
+
+Schema subject name for trace data. Defaults to 'redpanda-otel-traces' for protobuf encoding or 'redpanda-otel-traces-json' for JSON encoding.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.log_subject`
+
+Schema subject name for log data. Defaults to 'redpanda-otel-logs' for protobuf encoding or 'redpanda-otel-logs-json' for JSON encoding.
+
+
+*Type*: `string`
+
+*Default*: `""`
+
+=== `schema_registry.metric_subject`
+
+Schema subject name for metric data. Defaults to 'redpanda-otel-metrics' for protobuf encoding or 'redpanda-otel-metrics-json' for JSON encoding.
+
+
+*Type*: `string`
+
+*Default*: `""`
 
 
