--- a/docs/modules/components/pages/inputs/oracledb_cdc.adoc
+++ b/docs/modules/components/pages/inputs/oracledb_cdc.adoc
@@ -46,7 +46,7 @@ input:
     logminer:
       max_batch_size: 500
       backoff_interval: 5s
-      mining_strategy: online_catalog
+      strategy: online_catalog
     include: [] # No default (required)
     exclude: [] # No default (optional)
     checkpoint_cache: "" # No default (optional)
@@ -78,7 +78,7 @@ input:
     logminer:
       max_batch_size: 500
       backoff_interval: 5s
-      mining_strategy: online_catalog
+      strategy: online_catalog
     include: [] # No default (required)
     exclude: [] # No default (optional)
     checkpoint_cache: "" # No default (optional)
@@ -196,7 +196,7 @@ backoff_interval: 5s
 backoff_interval: 1m
 ```
 
-=== `logminer.mining_strategy`
+=== `logminer.strategy`
 
 Controls how LogMiner retrieves data dictionary information. `online_catalog` (default) uses the current data dictionary for best performance but cannot capture DDL changes. `online_catalog` currently only supported.
 
