--- a/docs/modules/components/pages/inputs/aws_dynamodb_cdc.adoc
+++ b/docs/modules/components/pages/inputs/aws_dynamodb_cdc.adoc
@@ -42,6 +42,7 @@ input:
     table: "" # No default (required)
     checkpoint_table: redpanda_dynamodb_checkpoints
     start_from: trim_horizon
+    snapshot_mode: none
 ```
 
 --
@@ -62,6 +63,12 @@ input:
     checkpoint_limit: 1000
     max_tracked_shards: 10000
     throttle_backoff: 100ms
+    snapshot_mode: none
+    snapshot_segments: 1
+    snapshot_batch_size: 100
+    snapshot_throttle: 100ms
+    snapshot_deduplicate: true
+    snapshot_buffer_size: 100000
     region: "" # No default (optional)
     endpoint: "" # No default (optional)
     tcp:
@@ -91,6 +98,7 @@ DynamoDB Streams capture item-level changes in DynamoDB tables. This input suppo
 - Automatic shard discovery and management
 - Checkpoint-based resumption after restarts
 - Concurrent processing of multiple shards
+- Optional initial snapshot of existing table data
 
 ### Prerequisites
 
@@ -101,9 +109,21 @@ The source DynamoDB table must have streams enabled. You can enable streams with
 - `OLD_IMAGE` - The entire item as it appeared before the modification
 - `NEW_AND_OLD_IMAGES` - Both the new and old item images
 
+### Snapshots
+
+When `snapshot_mode` is set to `snapshot_only` or `snapshot_and_cdc`, the input will first scan the entire table before (or instead of) streaming changes. This is useful for:
+
+- Building a replica or cache with all existing data
+- Syncing historical data to a data warehouse
+- Populating a search index with existing records
+
+WARNING: Snapshots use the DynamoDB Scan API which consumes read capacity units (RCUs). For large tables, this can be expensive and take considerable time. Use `snapshot_segments` and `snapshot_throttle` to control RCU consumption.
+
+NOTE: Snapshots use eventually consistent reads and do not provide point-in-time consistency. Records modified during the snapshot may appear in both the snapshot and CDC stream (with different values). Use `snapshot_deduplicate` to minimize duplicates.
+
 ### Checkpointing
 
-Checkpoints are stored in a separate DynamoDB table (configured via `checkpoint_table`). This table is created automatically if it does not exist. On restart, the input resumes from the last checkpointed position for each shard.
+Checkpoints are stored in a separate DynamoDB table (configured via `checkpoint_table`). This table is created automatically if it does not exist. On restart, the input resumes from the last checkpointed position for each shard. Snapshot progress is also checkpointed, allowing resumption mid-snapshot after failures.
 
 ### Alternative
 
@@ -113,9 +133,9 @@ For better performance and longer retention (up to 1 year vs 24 hours), consider
 
 This input adds the following metadata fields to each message:
 
-- `dynamodb_shard_id` - The shard ID from which the record was read
-- `dynamodb_sequence_number` - The sequence number of the record in the stream
-- `dynamodb_event_name` - The type of change: INSERT, MODIFY, or REMOVE
+- `dynamodb_shard_id` - The shard ID from which the record was read (empty for snapshot records)
+- `dynamodb_sequence_number` - The sequence number of the record in the stream (empty for snapshot records)
+- `dynamodb_event_name` - The type of change: INSERT, MODIFY, REMOVE, or READ (for snapshot records)
 - `dynamodb_table` - The name of the DynamoDB table
 
 ### Metrics
@@ -124,6 +144,9 @@ This input emits the following metrics:
 
 - `dynamodb_cdc_shards_tracked` - Total number of shards being tracked (gauge)
 - `dynamodb_cdc_shards_active` - Number of shards currently being read from (gauge)
+- `dynamodb_cdc_snapshot_state` - Snapshot state: 0=not_started, 1=in_progress, 2=complete (gauge)
+- `dynamodb_cdc_snapshot_records_read` - Total records read during snapshot (counter)
+- `dynamodb_cdc_snapshot_segments_active` - Number of active snapshot scan segments (gauge)
 
 
 == Examples
@@ -156,6 +179,22 @@ input:
     table: orders
     start_from: latest
     region: us-west-2
+```
+
+--
+Snapshot and CDC::
++
+--
+
+Scan all existing records, then stream ongoing changes.
+
+```yaml
+input:
+  aws_dynamodb_cdc:
+    table: products
+    snapshot_mode: snapshot_and_cdc
+    snapshot_segments: 5
+    region: us-east-1
 ```
 
 --
@@ -238,6 +277,66 @@ Time to wait when applying backpressure due to too many in-flight messages.
 *Type*: `string`
 
 *Default*: `"100ms"`
+
+=== `snapshot_mode`
+
+Snapshot behavior. `none`: CDC only (default). `snapshot_only`: one-time table scan, no streaming. `snapshot_and_cdc`: scan entire table then stream changes.
+
+
+*Type*: `string`
+
+*Default*: `"none"`
+
+Options:
+`none`
+, `snapshot_only`
+, `snapshot_and_cdc`
+.
+
+=== `snapshot_segments`
+
+Number of parallel scan segments (1-10). Higher parallelism scans faster but consumes more RCUs. Start with 1 for safety.
+
+
+*Type*: `int`
+
+*Default*: `1`
+
+=== `snapshot_batch_size`
+
+Records per scan request during snapshot. Maximum 1000. Lower values provide better backpressure control but require more API calls.
+
+
+*Type*: `int`
+
+*Default*: `100`
+
+=== `snapshot_throttle`
+
+Minimum time between scan requests per segment. Use this to limit RCU consumption during snapshot.
+
+
+*Type*: `string`
+
+*Default*: `"100ms"`
+
+=== `snapshot_deduplicate`
+
+Deduplicate records that appear in both snapshot and CDC stream. Requires buffering CDC events during snapshot. If buffer is exceeded, deduplication is disabled to prevent data loss.
+
+
+*Type*: `bool`
+
+*Default*: `true`
+
+=== `snapshot_buffer_size`
+
+Maximum CDC events to buffer for deduplication (approximately 100 bytes per entry). If exceeded, deduplication is disabled and duplicates may be emitted.
+
+
+*Type*: `int`
+
+*Default*: `100000`
 
 === `region`
 
