--- a/docs/modules/components/pages/processors/google_drive_download.adoc
+++ b/docs/modules/components/pages/processors/google_drive_download.adoc
@@ -39,6 +39,7 @@ google_drive_download:
   credentials_json: "" # No default (optional)
   file_id: "" # No default (required)
   mime_type: "" # No default (required)
+  shared_drives: false
 ```
 
 --
@@ -59,6 +60,7 @@ google_drive_download:
     application/vnd.google-apps.presentation: application/pdf
     application/vnd.google-apps.script: application/vnd.google-apps.script+json
     application/vnd.google-apps.spreadsheet: text/csv
+  shared_drives: false
 ```
 
 --
@@ -78,6 +80,29 @@ To use this mechanism locally, the following gcloud commands can be used:
 Otherwise if using a service account, you can create a JSON key for the service account and set it in the `credentials_json` field.
 In order for a service account to access files in Google Drive either files need to be explicitly shared with the service account email, otherwise https://support.google.com/a/answer/162106[^domain wide delegation] can be used to share all files within a Google Workspace.
 
+
+== Examples
+
+[tabs]
+======
+Download files from Google Drive::
++
+--
+
+This examples downloads all the files from Google Drive
+
+```yaml
+pipeline:
+  processors:
+    - google_drive_search:
+        query: "name = 'Test Doc'"
+    - google_drive_download:
+        file_id: "${!this.id}"
+        mime_type: "${!this.mimeType}"
+```
+
+--
+======
 
 == Fields
 
@@ -137,27 +162,13 @@ export_mime_types:
   application/vnd.google-apps.spreadsheet: application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
 ```
 
-== Examples
+=== `shared_drives`
 
-[tabs]
-======
-Download files from Google Drive::
-+
---
+Whether or not to include shared drives.
 
-This examples downloads all the files from Google Drive
 
-```yaml
-pipeline:
-  processors:
-    - google_drive_search:
-        query: "name = 'Test Doc'"
-    - google_drive_download:
-        file_id: "${!this.id}"
-        mime_type: "${!this.mimeType}"
-```
+*Type*: `bool`
 
---
-======
+*Default*: `false`
 
 
