Update docs and changelog

--- a/docs/modules/components/pages/inputs/mysql_cdc.adoc
+++ b/docs/modules/components/pages/inputs/mysql_cdc.adoc
@@ -106,9 +106,10 @@ input:
 
 This input adds the following metadata fields to each message:
 
-- operation
-- table
-- binlog_position
+- operation: The type of operation (insert, update, delete, or read for snapshot messages)
+- table: The name of the table
+- binlog_position: The binlog position (for CDC messages only, not set for snapshot messages)
+- schema: The table schema in benthos common schema format, compatible with processors like parquet_encode
 
 
 == Fields
