--- a/docs/modules/components/pages/outputs/sql_raw.adoc
+++ b/docs/modules/components/pages/outputs/sql_raw.adoc
@@ -179,7 +179,7 @@ A Data Source Name to identify the target database.
 
 ==== Drivers
 
-:driver-support: mysql=certified, postgres=certified, clickhouse=community, mssql=community, sqlite=certified, oracle=certified, snowflake=community, trino=community, gocosmos=community, spanner=community
+:driver-support: mysql=certified, postgres=certified, pgx=community, clickhouse=community, mssql=community, sqlite=certified, oracle=certified, snowflake=community, trino=community, gocosmos=community, spanner=community
 
 The following is a list of supported drivers, their placeholder style, and their respective DSN formats:
 
@@ -192,7 +192,7 @@ The following is a list of supported drivers, their placeholder style, and their
 | `mysql` 
 | `[username[:password]@][protocol[(address)]]/dbname[?param1=value1&...&paramN=valueN]` 
 
-| `postgres` 
+| `postgres` and `pgx` 
 | `postgres://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]` 
 
 | `mssql` 
@@ -220,7 +220,8 @@ The following is a list of supported drivers, their placeholder style, and their
 | `token:<access-token>@<server-hostname>:<port>/<http-path>` 
 |===
 
-Please note that the `postgres` driver enforces SSL by default, you can override this with the parameter `sslmode=disable` if required.
+Please note that the `postgres` and `pgx` drivers enforce SSL by default, you can override this with the parameter `sslmode=disable` if required.
+The `pgx` driver is an alternative to the standard `postgres` (pq) driver and comes with extra functionality such as support for array insertion.
 
 The `snowflake` driver supports multiple DSN formats. Please consult https://pkg.go.dev/github.com/snowflakedb/gosnowflake#hdr-Connection_String[the docs^] for more details. For https://docs.snowflake.com/en/user-guide/key-pair-auth.html#configuring-key-pair-authentication[key pair authentication^], the DSN has the following format: `<snowflake_user>@<snowflake_account>/<db_name>/<schema_name>?warehouse=<warehouse>&role=<role>&authenticator=snowflake_jwt&privateKey=<base64_url_encoded_private_key>`, where the value for the `privateKey` parameter can be constructed from an unencrypted RSA private key file `rsa_key.p8` using `openssl enc -d -base64 -in rsa_key.p8 | basenc --base64url -w0` (you can use `gbasenc` insted of `basenc` on OSX if you install `coreutils` via Homebrew). If you have a password-encrypted private key, you can decrypt it using `openssl pkcs8 -in rsa_key_encrypted.p8 -out rsa_key.p8`. Also, make sure fields such as the username are URL-encoded.
 
@@ -253,6 +254,7 @@ The query to execute. The style of placeholder to use depends on the driver, som
 | `clickhouse` | Dollar sign |
 | `mysql` | Question mark |
 | `postgres` | Dollar sign |
+| `pgx` | Dollar sign |
 | `mssql` | Question mark |
 | `sqlite` | Question mark |
 | `oracle` | Colon |
@@ -312,6 +314,7 @@ The query to execute. The style of placeholder to use depends on the driver, som
 | `clickhouse` | Dollar sign |
 | `mysql` | Question mark |
 | `postgres` | Dollar sign |
+| `pgx` | Dollar sign |
 | `mssql` | Question mark |
 | `sqlite` | Question mark |
 | `oracle` | Colon |
