feat: adding docs

--- a/docs/modules/guides/pages/bloblang/methods.adoc
+++ b/docs/modules/guides/pages/bloblang/methods.adoc
@@ -4175,6 +4175,7 @@ Introduced in version v4.20.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4188,6 +4189,15 @@ root.signed = this.claims.sign_jwt_es256("""-----BEGIN EC PRIVATE KEY-----
 # Out: {"signed":"eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MTYyMzkwMjIsIm1vb2QiOiJEaXNkYWluZnVsIiwic3ViIjoiMTIzNDU2Nzg5MCJ9.-8LrOdkEiv_44ADWW08lpbq41ZmHCel58NMORPq1q4Dyw0zFhqDVLrRoSvCvuyyvgXAFb9IHfR-9MlJ_2ShA9A"}
 ```
 
+```coffeescript
+root.signed = this.claims.sign_jwt_es256(signing_secret: """-----BEGIN EC PRIVATE KEY-----
+... signature data ...
+-----END EC PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
+```
+
 === `sign_jwt_es384`
 
 Hash and sign an object representing JSON Web Token (JWT) claims using ES384.
@@ -4198,6 +4208,7 @@ Introduced in version v4.20.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4211,6 +4222,15 @@ root.signed = this.claims.sign_jwt_es384("""-----BEGIN EC PRIVATE KEY-----
 # Out: {"signed":"eyJhbGciOiJFUzM4NCIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ1c2VyMTIzIn0.8FmTKH08dl7dyxrNu0rmvhegiIBCy-O9cddGco2e9lpZtgv5mS5qHgPkgBC5eRw1d7SRJsHwHZeehzdqT5Ba7aZJIhz9ds0sn37YQ60L7jT0j2gxCzccrt4kECHnUnLw"}
 ```
 
+```coffeescript
+root.signed = this.claims.sign_jwt_es384(signing_secret: """-----BEGIN EC PRIVATE KEY-----
+... signature data ...
+-----END EC PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
+```
+
 === `sign_jwt_es512`
 
 Hash and sign an object representing JSON Web Token (JWT) claims using ES512.
@@ -4221,6 +4241,7 @@ Introduced in version v4.20.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4234,6 +4255,15 @@ root.signed = this.claims.sign_jwt_es512("""-----BEGIN EC PRIVATE KEY-----
 # Out: {"signed":"eyJhbGciOiJFUzUxMiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ1c2VyMTIzIn0.AQbEWymoRZxDJEJtKSFFG2k2VbDCTYSuBwAZyMqexCspr3If8aERTVGif8HXG3S7TzMBCCzxkcKr3eIU441l3DlpAMNfQbkcOlBqMvNBn-CX481WyKf3K5rFHQ-6wRonz05aIsWAxCDvAozI_9J0OWllxdQ2MBAuTPbPJ38OqXsYkCQs"}
 ```
 
+```coffeescript
+root.signed = this.claims.sign_jwt_es512(signing_secret: """-----BEGIN EC PRIVATE KEY-----
+... signature data ...
+-----END EC PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
+```
+
 === `sign_jwt_hs256`
 
 Hash and sign an object representing JSON Web Token (JWT) claims using HS256.
@@ -4244,6 +4274,7 @@ Introduced in version v4.12.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4253,6 +4284,13 @@ root.signed = this.claims.sign_jwt_hs256("""dont-tell-anyone""")
 
 # In:  {"claims":{"sub":"user123"}}
 # Out: {"signed":"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ1c2VyMTIzIn0.hUl-nngPMY_3h9vveWJUPsCcO5PeL6k9hWLnMYeFbFQ"}
+```
+
+```coffeescript
+root.signed = this.claims.sign_jwt_hs256(signing_secret: """dont-tell-anyone""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
 ```
 
 === `sign_jwt_hs384`
@@ -4265,6 +4303,7 @@ Introduced in version v4.12.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4274,6 +4313,13 @@ root.signed = this.claims.sign_jwt_hs384("""dont-tell-anyone""")
 
 # In:  {"claims":{"sub":"user123"}}
 # Out: {"signed":"eyJhbGciOiJIUzM4NCIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ1c2VyMTIzIn0.zGYLr83aToon1efUNq-hw7XgT20lPvZb8sYei8x6S6mpHwb433SJdXJXx0Oio8AZ"}
+```
+
+```coffeescript
+root.signed = this.claims.sign_jwt_hs384(signing_secret: """dont-tell-anyone""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
 ```
 
 === `sign_jwt_hs512`
@@ -4286,6 +4332,7 @@ Introduced in version v4.12.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4295,6 +4342,13 @@ root.signed = this.claims.sign_jwt_hs512("""dont-tell-anyone""")
 
 # In:  {"claims":{"sub":"user123"}}
 # Out: {"signed":"eyJhbGciOiJIUzUxMiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJ1c2VyMTIzIn0.zBNR9o_6EDwXXKkpKLNJhG26j8Dc-mV-YahBwmEdCrmiWt5les8I9rgmNlWIowpq6Yxs4kLNAdFhqoRz3NXT3w"}
+```
+
+```coffeescript
+root.signed = this.claims.sign_jwt_hs512(signing_secret: """dont-tell-anyone""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
 ```
 
 === `sign_jwt_rs256`
@@ -4307,6 +4361,7 @@ Introduced in version v4.18.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4320,6 +4375,15 @@ root.signed = this.claims.sign_jwt_rs256("""-----BEGIN RSA PRIVATE KEY-----
 # Out: {"signed":"eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MTYyMzkwMjIsIm1vb2QiOiJEaXNkYWluZnVsIiwic3ViIjoiMTIzNDU2Nzg5MCJ9.b0lH3jEupZZ4zoaly4Y_GCvu94HH6UKdKY96zfGNsIkPZpQLHIkZ7jMWlLlNOAd8qXlsBGP_i8H2qCKI4zlWJBGyPZgxXDzNRPVrTDfFpn4t4nBcA1WK2-ntXP3ehQxsaHcQU8Z_nsogId7Pme5iJRnoHWEnWtbwz5DLSXL3ZZNnRdrHM9MdI7QSDz9mojKDCaMpGN9sG7Xl-tGdBp1XzXuUOzG8S03mtZ1IgVR1uiBL2N6oohHIAunk8DIAmNWI-zgycTgzUGU7mvPkKH43qO8Ua1-13tCUBKKa8VxcotZ67Mxm1QAvBGoDnTKwWMwghLzs6d6WViXQg6eWlJcpBA"}
 ```
 
+```coffeescript
+root.signed = this.claims.sign_jwt_rs256(signing_secret: """-----BEGIN RSA PRIVATE KEY-----
+... signature data ...
+-----END RSA PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
+```
+
 === `sign_jwt_rs384`
 
 Hash and sign an object representing JSON Web Token (JWT) claims using RS384.
@@ -4330,6 +4394,7 @@ Introduced in version v4.18.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4343,6 +4408,15 @@ root.signed = this.claims.sign_jwt_rs384("""-----BEGIN RSA PRIVATE KEY-----
 # Out: {"signed":"eyJhbGciOiJSUzM4NCIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MTYyMzkwMjIsIm1vb2QiOiJEaXNkYWluZnVsIiwic3ViIjoiMTIzNDU2Nzg5MCJ9.orcXYBcjVE5DU7mvq4KKWFfNdXR4nEY_xupzWoETRpYmQZIozlZnM_nHxEk2dySvpXlAzVm7kgOPK2RFtGlOVaNRIa3x-pMMr-bhZTno4L8Hl4sYxOks3bWtjK7wql4uqUbqThSJB12psAXw2-S-I_FMngOPGIn4jDT9b802ottJSvTpXcy0-eKTjrV2PSkRRu-EYJh0CJZW55MNhqlt6kCGhAXfbhNazN3ASX-dmpd_JixyBKphrngr_zRA-FCn_Xf3QQDA-5INopb4Yp5QiJ7UxVqQEKI80X_JvJqz9WE1qiAw8pq5-xTen1t7zTP-HT1NbbD3kltcNa3G8acmNg"}
 ```
 
+```coffeescript
+root.signed = this.claims.sign_jwt_rs384(signing_secret: """-----BEGIN RSA PRIVATE KEY-----
+... signature data ...
+-----END RSA PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
+```
+
 === `sign_jwt_rs512`
 
 Hash and sign an object representing JSON Web Token (JWT) claims using RS512.
@@ -4353,6 +4427,7 @@ Introduced in version v4.18.0.
 ==== Parameters
 
 *`signing_secret`* &lt;string&gt; The secret to use for signing the token.  
+*`headers`* &lt;(optional) unknown&gt; Optional object of JWT header fields to include in the token. Keys "alg" and "typ" will be ignored if provided.  
 
 ==== Examples
 
@@ -4364,6 +4439,15 @@ root.signed = this.claims.sign_jwt_rs512("""-----BEGIN RSA PRIVATE KEY-----
 
 # In:  {"claims":{"sub":"user123"}}
 # Out: {"signed":"eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJpYXQiOjE1MTYyMzkwMjIsIm1vb2QiOiJEaXNkYWluZnVsIiwic3ViIjoiMTIzNDU2Nzg5MCJ9.rsMp_X5HMrUqKnZJIxo27aAoscovRA6SSQYR9rq7pifIj0YHXxMyNyOBDGnvVALHKTi25VUGHpfNUW0VVMmae0A4t_ObNU6hVZHguWvetKZZq4FZpW1lgWHCMqgPGwT5_uOqwYCH6r8tJuZT3pqXeL0CY4putb1AN2w6CVp620nh3l8d3XWb4jaifycd_4CEVCqHuWDmohfug4VhmoVKlIXZkYoAQowgHlozATDssBSWdYtv107Wd2AzEoiXPu6e3pflsuXULlyqQnS4ELEKPYThFLafh1NqvZDPddqozcPZ-iODBW-xf3A4DYDdivnMYLrh73AZOGHexxu8ay6nDA"}
+```
+
+```coffeescript
+root.signed = this.claims.sign_jwt_rs512(signing_secret: """-----BEGIN RSA PRIVATE KEY-----
+... signature data ...
+-----END RSA PRIVATE KEY-----""", headers: {"kid": "my-key", "x": "y"})
+
+# In:  {"claims":{"sub":"user123"}}
+# Out: {"signed":"<signed JWT token>"}
 ```
 
 == GeoIP
