--- a/docs/modules/components/pages/outputs/redis_hash.adoc
+++ b/docs/modules/components/pages/outputs/redis_hash.adoc
@@ -58,6 +58,7 @@ output:
     url: redis://:6379 # No default (required)
     kind: simple
     master: ""
+    client_name: redpanda-connect
     tls:
       enabled: false
       skip_cert_verify: false
@@ -161,6 +162,15 @@ Name of the redis master when `kind` is `failover`
 
 master: mymaster
 ```
+
+=== `client_name`
+
+Name of the client connection to redis.
+
+
+*Type*: `string`
+
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
