--- a/docs/modules/components/pages/processors/redis_script.adoc
+++ b/docs/modules/components/pages/processors/redis_script.adoc
@@ -56,6 +56,7 @@ redis_script:
   url: redis://:6379 # No default (required)
   kind: simple
   master: ""
+  client_name: redpanda-connect
   tls:
     enabled: false
     skip_cert_verify: false
@@ -164,6 +165,15 @@ Name of the redis master when `kind` is `failover`
 
 master: mymaster
 ```
+
+=== `client_name`
+
+Name of the client connection to redis.
+
+
+*Type*: `string`
+
+*Default*: `"redpanda-connect"`
 
 === `tls`
 
